--- a/lp01.md
+++ b/lp01.md
@@ -4,3 +4,6 @@ El niño huérfano **Larry** vive con sus tíos que lo tratan bastante mal
 (le hacen usar *Internet Explorer*).
 
 Tiene unas *Google Glasses* redondas y una cicatriz de un *USB* en la frente.
+
+Un día, aparece **Neo** , el de *Matrix*, y le dice que él también puede ser
+un hacker.
