Finalizo, por tercera vez, el resument del primer libro. Actualizo el resumen del segundo libro.

--- a/lp01.md
+++ b/lp01.md
@@ -7,3 +7,6 @@ Tiene unas *Google Glasses* redondas y una cicatriz de un *USB* en la frente.
 
 Un día, aparece **Neo** , el de *Matrix*, y le dice que él también puede ser
 un hacker.
+
+Allí conoce a sus amigos **ROM** y **Versión** y vive sus primeras
+aventuras picando codigo.
