Completo resumen quinto libro

--- a/lp05.md
+++ b/lp05.md
@@ -2,3 +2,5 @@
 
 El código de **Larry** cada vez se vuelve más peligroso.
 **Lord Ballmermort** y sus *followers* tienen cada vez más *retweets*.
+
+La orden del *Unix* luchará por el bien del mundo
