Añado segunda línea del resumen del libro 7

--- a/lp07.md
+++ b/lp07.md
@@ -1,4 +1,9 @@
 # Larry Plotter y los Commits de la muerte
 
+
 **Larry**, **ROM** y **Versión** se lanzan a la búsqueda de los *exploits*
 que **Ballmermort** necesita para sobrevivir.
+Destruyendo todos los **exploits**, vencerán a **Ballmermort**.
+Pero el camino no será fácil porque sus portátiles no tienen mucha batería.
+**Larry** deberá usar todos los conocimientos que ha adquirido para
+entregar el producto sin malware.
