--- a/lp06.md
+++ b/lp06.md
@@ -1,4 +1,7 @@
-# Larry Plotter y el Misterio del Hacker
+# Larry Plotter y el Misterio del Hacker (Ballmermort)
 
 **Larry** descubre un libro de ensamblador y compiladores que pertenece
 a un **hacker**.
+A lo largo de la historia, **Ballmermort** está de todo el misterio.
+**Larry** y el director del colegio, encuentran una nueva forma de
+combatirle.
